@@ -39,6 +39,7 @@ export(gseGO)
 export(gseKEGG)
 export(gseaplot)
 export(idType)
+export(merge_result)
 export(plot)
 export(plotGOgraph)
 exportClasses(compareClusterResult)
