@@ -1,9 +1,21 @@
+@article{yu_chipseeker_2015,
+         title  = "ChIPseeker: an R/Bioconductor package for ChIP peak annotation, comparison and visualization",
+         author = {Yu, Guangchuang and Wang, Li-Gen and He, Qing-Yu},
+         journal = "Bioinformatics",
+         year    = "2015",
+         volume  = "31",
+         number  = "14",
+         pages   = "2382-2383",
+         PMID    = "25765347",
+	 url     = {http://bioinformatics.oxfordjournals.org/content/31/14/2382.abstract},
+         doi     = "10.1093/bioinformatics/btv145",
+}
 
 @article{yu_dose_2015,
 	title = {{DOSE}: an R/Bioconductor package for disease ontology semantic and enrichment analysis},
 	volume = {31},
 	issn = {1367-4803, 1460-2059},
-	url = {http://bioinformatics.oxfordjournals.org.eproxy2.lib.hku.hk/content/31/4/608},
+	url = {http://bioinformatics.oxfordjournals.org/content/31/4/608},
 	doi = {10.1093/bioinformatics/btu684},
 	shorttitle = {{DOSE}},
 	abstract = {Summary: Disease ontology ({DO}) annotates human genes in the context of disease. {DO} is important annotation in translating molecular findings from high-throughput data to clinical relevance. {DOSE} is an R package providing semantic similarity computations among {DO} terms and genes which allows biologists to explore the similarities of diseases and of gene functions in disease perspective. Enrichment analyses including hypergeometric model and gene set enrichment analysis are also implemented to support discovering disease associations of high-throughput biological data. This allows biologists to verify disease relevance in a biological experiment and identify unexpected disease associations. Comparison among gene clusters is also supported.
